# ai_powered_todo

./: docker-compose.yml
todo_client/: ecosystem.config.cjs  index.html  package-lock.json  package.json
todo_client/src/: App.tsx  index.css
todo_client/src/components/: AIInputPanel.tsx  AuthLayout.tsx  CustomSelect.tsx  Dashboard.tsx  FilterBar.tsx  Header.tsx  SortBar.tsx  StatsBar.tsx  TaskCard.tsx  TaskList.tsx  TaskModal.tsx
todo_client/src/context/: AuthContext.tsx  TaskContext.tsx
todo_client/src/hooks/: useVoiceInput.ts
todo_client/src/pages/: Login.tsx  Signup.tsx
todo_client/src/types/: index.ts
todo_client/src/utils/: api.ts  taskUtils.ts
todo_server/: .env  .env.sample  pyproject.toml
todo_server/alembic/: env.py
todo_server/alembic/versions/: b64cb10dca91_create_todos_table.py  d1e1ee00815c_add_table_users.py  fa8752dd8a08_fix_timezone.py
todo_server/app/: main.py
todo_server/app/api/: ai.py  auth.py  deps.py  todo.py
todo_server/app/core/: config.py  database.py  security.py
todo_server/app/models/: todo.py  user.py
todo_server/app/schemas/: ai.py  auth.py  todo.py  user.py
todo_server/app/services/: auth_service.py  todo_service.py
todo_server/app/services/ai/: graph.py  mapper.py  nodes.py  resolver.py  response.py  state.py  tools.py
